--- a/style.css
+++ b/style.css
@@ -1,50 +1,101 @@
+/*
+  1. Use a more-intuitive box-sizing model.
+*/
+*, *::before, *::after {
+    box-sizing: border-box;
+  }
+  /*
+    2. Remove default margin
+  */
+  * {
+    margin: 0;
+  }
+  /*
+    Typographic tweaks!
+    3. Add accessible line-height
+    4. Improve text rendering
+  */
+  body {
+    line-height: 1.5;
+    -webkit-font-smoothing: antialiased;
+  }
+  /*
+    5. Improve media defaults
+  */
+  img, picture, video, canvas, svg {
+    display: block;
+    max-width: 100%;
+  }
+  /*
+    6. Remove built-in form typography styles
+  */
+  input, button, textarea, select {
+    font: inherit;
+  }
+  /*
+    7. Avoid text overflows
+  */
+  p, h1, h2, h3, h4, h5, h6 {
+    overflow-wrap: break-word;
+  }
+  /*
+    8. Create a root stacking context
+  */
+  #root, #__next {
+    isolation: isolate;
+  }
+
 :root {
-  --dark-blue: hsl(218, 44%, 22%);
-  --grayish-blue: hsl(220, 15%, 55%);
-  --light-gray: hsl(212, 45%, 89%);
-  --white: hsl(0, 0%, 100%);
+    --dark-blue: hsl(218, 44%, 22%);
+    --grayish-blue: hsl(220, 15%, 55%);
+    --light-gray: hsl(212, 45%, 89%);
+    --white: hsl(0, 0%, 100%);
+    
+    --box-shadow-color: hsla(218, 44%, 22%, 0.25);
+    
+    --font-main: 'Outfit', sans-serif;
+    
+    background-color: var(--light-gray);
+  }
   
-  --box-shadow-color: hsla(218, 44%, 22%, 0.25);
+  .container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+  }
   
-  --font-main: 'Outfit', sans-serif;
+  .card {
+    width: 16em;
+    height: 26em;
+    background-color: var(--white);
+    border-radius: 5%;
+    padding: 0.75em 0.75em 2.5em 0.75em;
+    box-shadow: 0 0 0.5em var(--box-shadow-color);
+    display: grid;
+    align-items: center;
+  }
   
-  background-color: var(--light-gray);
-}
+  p {
+    font-family: var(--font-main);
+    text-align: center; 
+    color: var(--grayish-blue);
+    margin-top: 1em;
+    margin-left: 0.5em;
+    margin-right: 0.5em;
+    font-size: 13px;
+    line-height: 125%;
+  }
+  
+  .bold-text {
+    color: var(--dark-blue);
+    font-size: 1.1rem;
+    font-weight: 700;
+    line-height: normal;
+  }
 
-.container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-}
-
-.card {
-  width: 16em;
-  height: 24.5em;
-  background-color: var(--white);
-  border-radius: 5%;
-  padding: 0.75em;
-  box-shadow: 0 0 0.5em var(--box-shadow-color);
-}
-
-.substitute {
-  width: 16em;
-  height: 15em;
-  background-color: var(--dark-blue);
-  border-radius: 5%;
-}
-
-p {
-  font-family: var(--font-main);
-  text-align: center; 
-  color: var(--grayish-blue);
-  margin-left: 0.5em;
-  margin-right: 0.5em;
-  font-size: 15px;
-}
-
-.bold-text {
-  color: var(--dark-blue);
-  font-size: 1.2rem;
-  font-weight: 700;
-}
+  img {
+    width: 25em;
+    border-radius: 4%;
+    margin-bottom: 0.75em;
+  }
