--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@
     --light-gray: hsl(212, 45%, 89%);
     --white: hsl(0, 0%, 100%);
     
-    --box-shadow-color: hsla(218, 44%, 22%, 0.25);
+    --box-shadow-color: hsla(218, 44%, 22%, 0.025);
     
     --font-main: 'Outfit', sans-serif;
     
@@ -71,7 +71,7 @@
     background-color: var(--white);
     border-radius: 5%;
     padding: 0.75em 0.75em 2.5em 0.75em;
-    box-shadow: 0 0 0.5em var(--box-shadow-color);
+    box-shadow: 0 1.5em 0.5em var(--box-shadow-color);
     display: grid;
     align-items: center;
   }
